# PPO-algorithm-finetuning-DDPM

./: README.md  requirements.txt  utils.py
configs/: default.yaml  reward.yaml  smoke.yaml
ddpm/: model.py  sample.py  schedule.py
ddpm-ppo-finetune-verbatim/: README.md  pyproject.toml
ddpm-ppo-finetune-verbatim/configs/: finetune.yaml  sample.yaml
ddpm-ppo-finetune-verbatim/src/ddpmppo/cli/: finetune_ddpm.py  train_reward.py
ddpm-ppo-finetune-verbatim/src/ddpmppo/diffusion/: schedule.py
ddpm-ppo-finetune-verbatim/src/ddpmppo/impl/: finetune_ddpm_with_ppo_colab.py
ddpm-ppo-finetune-verbatim/src/ddpmppo/ppo/: trainer.py
ddpm-ppo-finetune-verbatim/src/ddpmppo/utils/: log.py
diffusion/: ddpm.py
logs/finetune/20251105_1111/: events.out.tfevents.1762308704.DESKTOP-I6HIRP7.23044.0
logs/finetune/20251105_1420/: events.out.tfevents.1762320006.DESKTOP-I6HIRP7.6176.0
logs/finetune/20251105_1421/: events.out.tfevents.1762320100.DESKTOP-I6HIRP7.23940.0
logs/finetune/20251105_1422/: events.out.tfevents.1762320129.DESKTOP-I6HIRP7.17628.0
logs/train_reward_model/20251105_1024/: events.out.tfevents.1762305847.DESKTOP-I6HIRP7.13388.0
logs/train_reward_model/20251105_1417/: events.out.tfevents.1762319856.DESKTOP-I6HIRP7.15060.0
logs/train_reward_model/20251105_1418/: events.out.tfevents.1762319920.DESKTOP-I6HIRP7.8756.0
ppo/: algorithm.py  utils.py
reward/: dataset.py  model.py
scripts/: eval.py  finetune.py  train_reward_model.py
src/ddpmppo/cli/: sample.py
src/ddpmppo/diffusion/: sampling.py
src/ddpmppo/legacy/: train_reward_model_v2_colab.py
(+5 files in other folders)
