[project]
name = "ddpmppo"
version = "0.1.0"
description = "Finetune a trained DDPM with PPO (two-pass, pretrained DDPM only)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "DHK", email = "you@example.com" }]

dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy",
  "tqdm",
  "pillow",
  "pyyaml",
  "matplotlib",
  "tensorboard"
]

[project.scripts]
train-reward = "ddpmppo.cli.train_reward:main"
finetune-ddpm = "ddpmppo.cli.finetune_ddpm:main"
sample-ddpm = "ddpmppo.cli.sample:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
